Improve Masonry loading to avoid layout issues

--- a/asset/sass/components/resources/_resource-grid.scss
+++ b/asset/sass/components/resources/_resource-grid.scss
@@ -1,4 +1,5 @@
 .resource-grid {
+    opacity: 0;
 	list-style: none;
     padding-left: 0;
     position: relative;
